Revision history for HTTP-Daemon

{{$NEXT}}

6.02      2019-04-01 16:03:37Z
  - Added a .mailmap to properly keep up with contributors to the dist.
  - Revised the changelog to follow current format styles
  - Change port number in test (GH#5) (Perlover)

6.01    2012-02-18
  - If you bind localhost, don't trust gethostbyaddr() to resolve the address.
    RT#67247
  - Restore perl-5.8.1 compatiblity.

6.00    2011-02-25
  - Initial release of HTTP-Daemon as a separate distribution. There are no code
    changes besides incrementing the version number since libwww-perl-5.837.
  - The HTTP::Daemon used to be bundled with the libwww-perl distribution.