@@ -1,6 +1,8 @@
 Revision history for HTTP-Daemon
 
 {{$NEXT}}
+  - Remove circular dependency with LWP::UserAgent introduced in 6.02 (GH#27)
+    (Olaf Alders)
 
 6.02      2019-04-01 16:03:37Z
   - Added a .mailmap to properly keep up with contributors to the dist.
